# tesserae-reTerminal-7.3-client

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  heartbeat.c  main.c  mqtt_handler.c  pmic.c  provisioning.c
tools/: release.sh
